Updated the X & Y axis label of the admission forecasting

--- a/Notebooks/NHS England - Hospital Admitted Patient Diagnosis.ipynb
+++ b/Notebooks/NHS England - Hospital Admitted Patient Diagnosis.ipynb
@@ -560,6 +560,8 @@
     "forecast[['ds', 'yhat', 'yhat_lower', 'yhat_upper']].tail()\n",
     "\n",
     "fig1 = model.plot(forecast)\n",
+    "fig1.gca().set_xlabel('Year')\n",
+    "fig1.gca().set_ylabel('Finished Admission Episodes (Breast Cancer)')\n",
     "\n",
     "display(forecast)"
    ]
