Added sankey chart study

--- a/Notebooks/NHS England - Hospital Admitted Patient Diagnosis.ipynb
+++ b/Notebooks/NHS England - Hospital Admitted Patient Diagnosis.ipynb
@@ -177,11 +177,11 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "year = 15\n",
+    "year = 24\n",
     "path = f'/Workspace/Users/gaogang@gmail.com/Files/NHS England/Admitted Patient Care Activity/Diagnosis/hosp-epis-stat-admi-diag-20{year}-{year+1}-tab.xlsx'\n",
-    "sheet = 'Primary Diagnosis 3 Character'\n",
+    "sheet = 'Primary Diagnosis 3 Character '\n",
     "\n",
-    "df = pd.read_excel(path, sheet_name=sheet,usecols=\"A:B, H:L\", names=[\"Code\", \"Primary Diagnosis\", \"Finished Consultant Episodes\",\"Finished Admission Episodes\",\"Male\", \"Female\", \"Gender Unknown\"], skiprows=12)\n",
+    "df = pd.read_excel(path, sheet_name=sheet,usecols=\"A:B, H:P\", names=[\"Code\", \"Primary Diagnosis\", \"Finished Consultant Episodes\",\"Finished Admission Episodes\",\"Male\", \"Female\", \"Gender Unknown\", \"Emergency\", \"Waiting List\", \"Planned\", \"Other\"], skiprows=12)\n",
     "df[\"Year\"] = 2000 + year + 1\n",
     "\n",
     "df = df[df[\"Primary Diagnosis\"].notnull()]\n",
@@ -191,7 +191,11 @@
     "    \"Finished Admission Episodes\",\n",
     "    \"Male\",\n",
     "    \"Female\",\n",
-    "    \"Gender Unknown\"\n",
+    "    \"Gender Unknown\", \n",
+    "    \"Emergency\", \n",
+    "    \"Waiting List\", \n",
+    "    \"Planned\", \n",
+    "    \"Other\"\n",
     "]:\n",
     "    df[col] = pd.to_numeric(df[col], errors='coerce')\n",
     "\n",
@@ -244,6 +248,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "01fedc33-42ac-4eaa-92f6-61f4cbb2834b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from delta.tables import DeltaTable\n",
+    "\n",
+    "# Convert pandas DataFrame to Spark DataFrame\n",
+    "spark_df = spark.createDataFrame(df)\n",
+    "\n",
+    "# Merge (upsert) into the Iceberg table using Code and Year as unique identifiers\n",
+    "spark_df.createOrReplaceTempView(\"tmp_diagnosis_update\")\n",
+    "\n",
+    "merge_sql = \"\"\"\n",
+    "MERGE INTO `depq-nhs`.patient_care.diagnosis_lv2 AS target\n",
+    "USING tmp_diagnosis_update AS source\n",
+    "ON target.Code = source.Code AND target.Year = source.Year\n",
+    "WHEN MATCHED THEN UPDATE SET *\n",
+    "\"\"\"\n",
+    "\n",
+    "spark.sql(merge_sql)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -260,6 +300,48 @@
    },
    "source": [
     "## 4. Simple analytics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "b7f494a4-35e9-4397-a921-d96ea4993eb6",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Display Year 2025 Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "70175a6e-93dc-4d14-a5e9-144deb3a7c51",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_2025 = spark.sql(\"\"\"\n",
+    "SELECT *\n",
+    "FROM `depq-nhs`.patient_care.diagnosis_lv2\n",
+    "WHERE Year = 2025\n",
+    "\"\"\")\n",
+    "display(df_2025)"
    ]
   },
   {
