--- a/Notebooks/NHS England - Hospital Admitted Patient Diagnosis.ipynb
+++ b/Notebooks/NHS England - Hospital Admitted Patient Diagnosis.ipynb
@@ -178,7 +178,7 @@
     "import pandas as pd\n",
     "\n",
     "year = 24\n",
-    "path = f'/Workspace/Users/gaogang@gmail.com/Files/NHS England/Admitted Patient Care Activity/Diagnosis/hosp-epis-stat-admi-diag-20{year}-{year+1}-tab.xlsx'\n",
+    "path = f'/Workspace/Users/<email>/Files/NHS England/Admitted Patient Care Activity/Diagnosis/hosp-epis-stat-admi-diag-20{year}-{year+1}-tab.xlsx'\n",
     "sheet = 'Primary Diagnosis 3 Character '\n",
     "\n",
     "df = pd.read_excel(path, sheet_name=sheet,usecols=\"A:B, H:P\", names=[\"Code\", \"Primary Diagnosis\", \"Finished Consultant Episodes\",\"Finished Admission Episodes\",\"Male\", \"Female\", \"Gender Unknown\", \"Emergency\", \"Waiting List\", \"Planned\", \"Other\"], skiprows=12)\n",
